# rccl_case

./: .gitignore  pyproject.toml
rccl/notebooks/: pricing_optimization.ipynb  pricing_optimization_no_competitor.ipynb
rccl/src/: __init__.py  data_loader.py  feature_engineering.py  models.py  splitter.py  visualizer.py
src/: eda.py  evaluator.py
tech_interview_preparation/: .gitignore  README.md  main.py  pyproject.toml  utils.py  utils.py:Zone.Identifier
tech_interview_preparation/01_fundamentals/: 00_exercise.ipynb  00_sql_python.md  01_ml_basics.md  02_data_processing.md  03_model_development.ipynb  03_model_development.md  04_evaluation_metrics.ipynb  04_evaluation_metrics.md  missing_topics.md
tech_interview_preparation/02_specializations/computer_vision/: computer_vision_basics.md  computer_vision_exercise.ipynb
tech_interview_preparation/02_specializations/deep_learning/: deep_learning_basics.md  deep_learning_exercise.ipynb
tech_interview_preparation/02_specializations/nlp/: nlp_basics.md  nlp_exercise.ipynb
tech_interview_preparation/02_specializations/recommendation_systems/: recsys_basics.md  recsys_exercise.ipynb
tech_interview_preparation/03_mock_interviews/: 01_ml_basics.ipynb  02_data_processing.ipynb  answered_responses.md  general_questions.md  scenario_based.md
