[project]
name = "rccl-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.9",
    "mlflow>=2.20",
    "numpy>=2.4.4",
    "pandas>=2.2,<3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
]
